# azure-sphere-thief-detector

./: .gitignore  README.ja.md  readme.md
projects/multicore/control-hl/: CMakeLists.txt  app_manifest.json  azureiotsend.c  azureiotsend.h  launch.vs.json  main.c
projects/multicore/sampling-rt/: CMakeLists.txt  CalculateTask.cpp  CalculateTask.h  CaptureTask.cpp  CaptureTask.h  Config.h  MboxTask.cpp  MboxTask.h  app_manifest.json  launch.vs.json  main.cpp
projects/multicore/sampling-rt/drivers/: AnalogIn.cpp  AnalogIn.h  DigitalOut.cpp  DigitalOut.h  MailboxHLCore.cpp  MailboxHLCore.h  Ticker.cpp  Ticker.h
projects/singlecore/standalone-hl/: CMakeLists.txt  app_manifest.json  main.c  queue.h
